--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -302,10 +302,9 @@
                         models were efficiently trainable with millions of parameters. We construct a scalable algorithm for computing gradients through samples from stochastic differential equations (SDEs), and for gradient-based stochastic variational
                         inference in function space, all with the use of adaptive black-box SDE solvers. This allows us to fit a new family of richly-parameterized distributions over time series, in which neural networks can parameterize both dynamics
                         and likelihoods. We demonstrate these latent SDEs on motion capture data, and provide an open-source PyTorch library for fitting large SDE models.
+                        <br> <a href=" https://arxiv.org/abs/2001.01328" target="_blank">[Paper]</a>
+                        <a href="https://github.com/google-research/torchsde">[Code]</a>
                     </p>
-                    <p><a href=" https://arxiv.org/abs/2001.01328" target="_blank">[Paper]</a>
-                        <a href="https://github.com/google-research/torchsde">[Code]</a></p>
-
                     <p>
                         <b>Bio</b><br>David Duvenaud is an assistant professor at the University of Toronto. His research focuses on constructing deep probabilistic models to help predict, explain and design things. For example: Neural ODEs, a kind of
                         continuous-depth neural network, Automatic chemical design using generative models, Gradient-based hyperparameter tuning, Structured latent-variable models for modeling video, and Convolutional networks on graphs. Previously, He
@@ -332,10 +331,12 @@
                 <div class="col-sm-8 text-justify">
                     <h3>Irrational Exuberance: Why we should not believe 99% of papers on Time Series Anomaly Detection
                     </h3>
-                    In the last five years there has been an explosion of paper on time series anomaly detection (TSAD) appearing in all the top conferences. In this talk I will make a surprising claim. Almost all such papers suffer from various flaws, including: Testing
-                    on deeply flawed datasets, use of inappropriate measures of success, non-reproducible experiments, unjustified complexity, and ignoring competitive decades-old methods. I will demonstrate that because of these flaws, we should not
-                    believe the claims of most papers on time series anomaly detection. Rather than a completely pessimistic talk, I will take this opportunity to release a new set of 250 benchmark datasets and guidelines that will go some way to mitigating
-                    the problems.
+                    <p>
+                        In the last five years there has been an explosion of paper on time series anomaly detection (TSAD) appearing in all the top conferences. In this talk I will make a surprising claim. Almost all such papers suffer from various flaws, including: Testing
+                        on deeply flawed datasets, use of inappropriate measures of success, non-reproducible experiments, unjustified complexity, and ignoring competitive decades-old methods. I will demonstrate that because of these flaws, we should
+                        not believe the claims of most papers on time series anomaly detection. Rather than a completely pessimistic talk, I will take this opportunity to release a new set of 250 benchmark datasets and guidelines that will go some way
+                        to mitigating the problems.
+                    </p>
                     <p>
                         <b>Bio</b><br>Eamonn Keogh is a Distinguished Professor of Computer Science at the University of California Riverside. With his students, he invented many of the most commonly used time series primitives, including Shapelets, Discords,
                         Motifs, SAX, PAA, LB_keogh and the Matrix Profile. He has won at least one best paper award in the major data mining conferences (SIGMOD, SIGKDD, ICDM, SDM) and his h-index of 100 reflects the significant amount of citations his
