--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -186,7 +186,7 @@
                         <li>
                             <strong>RLAD: Time Series Anomaly Detection through ReinforcementLearning and Active Learning</strong>. Tong Wu and Jorge Ortiz</li>
                         <li>
-                            <strong>Personalized and Environment-Aware Battery Prediction for Electric Vehicles</strong>. Jingbo Yang, Ruge Zhao, Meixian Zhu, Jaka Sodnik, David Hallac and Jure Leskovec</li>
+                            <strong>Personalized and Environment-Aware Battery Prediction for Electric Vehicles</strong>. Dongyue Li, Guangyu Li, Bo Jiang, Zhengping Che and Yan Liu</li>
                         <li>
                             <strong>Exploring Generative Data Augmentation in Multivariate Time Series Forecasting : Opportunities and Challenges</strong>. Ankur Debnath, Govind Waghmare, Hardik Wadhwa, Siddhartha Asthana and Ankur Arora</li>
                         <li>
