--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -221,8 +221,8 @@
                     </ul>
                     <p>14:00-14:35 Poster Spotlights</p>
                     <p>14:35-15:00 Coffee Break</p>
-                    <p>15:00-15:50 Poster Session</p>
-                    <p>15:50-16:50 Keynote Talk</p>
+                    <p>15:00-16:00 Poster Session</p>
+                    <p>16:00-16:50 Keynote Talk</p>
                     <ul>
                         <li><strong>On the Interface between Optimal Transport and Time Series</strong>, <em>Marco Cuturi</em></li>
                     </ul>
@@ -390,8 +390,170 @@
 
 
     <!-- Accepted Papers Section -->
+    <section id="papers" class="bg-mid-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Accepted Papers</h2>
+                    <!--h3 class="section-heading">TBA</h3> -->
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-1 text-justify">
+                    &nbsp;
+                </div>
+                <div class="col-lg-10 text-justify">
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_2.pdf" target="_blank"> 
+        RLAD: Time Series Anomaly Detection through ReinforcementLearning and Active Learning
+        </a> Tong Wu and Jorge Ortiz.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_4.pdf" target="_blank"> 
+        Personalized and Environment-Aware Battery Prediction for Electric Vehicles
+        </a> Dongyue Li, Guangyu Li, Bo Jiang, Zhengping Che and Yan Liu.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_7.pdf" target="_blank"> 
+        Exploring Generative Data Augmentation in Multivariate Time Series Forecasting : Opportunities and Challenges
+        </a> Ankur Debnath, Govind Waghmare, Hardik Wadhwa, Siddhartha Asthana and Ankur Arora.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_8.pdf" target="_blank"> 
+        Short Text Clustering in Continuous Time Using Stacked Dirichlet-Hawkes Process with Inverse Cluster Frequency Prior
+        </a> Avirup Saha and Balaji Ganesan.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_14.pdf" target="_blank"> 
+        TE-ESN: Time Encoding Echo State Network for Prediction Based on Irregularly Sampled Time Series Data
+        </a> Chenxi Sun, Shenda Hong, Moxian Song and Hongyan Li.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_20.pdf" target="_blank"> 
+        Learning Robust Representations using a Change Point Framework
+        </a> Ame Osotsi and Qunhua Li.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_23.pdf" target="_blank"> 
+        Low-Rank Autoregressive Tensor Completion for Spatiotemporal Traffic Data Imputation
+        </a> Xinyu Chen, Mengying Lei, Nicolas Saunier and Lijun Sun.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_24.pdf" target="_blank"> 
+        Improving COVID-19 Forecasting using eXogenous Variables
+        </a> Mohammadhossein Toutiaee, Xiaochuan Li, Yogesh Chaudhari, Shophine Sivaraja, Aishwarya Venkataraj, Indrajeet Javeri, Yuan Ke, Ismailcem Arpinar, Nicole Lazar and John Miller.
+                    </p>
+                </div>
+                <div class="col-lg-1 text-justify">
+                    &nbsp;
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <section id="posters" class="bg-mid-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Accepted Posters</h2>
+                    <!-- <h3 class="section-heading">TBA</h3> -->
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-1 text-justify">
+                    &nbsp;
+                </div>
+                <div class="col-lg-10 text-justify">
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_5.pdf" target="_blank"> 
+                        Visual Time Series Forecasting: An Image-driven Approach
+                        </a> Naftali Cohen, Srijan Sood, Zhen Zeng, Tucker Balch and Manuela Veloso.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_9.pdf" target="_blank"> 
+                        Multi-Window-Finder: Domain Agnostic Window Size for Time Series Data
+                        </a> Shima Imani, Alireza Abdoli, Ali Beyram, Azam Imani and Eamonn Keogh.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_10.pdf" target="_blank"> 
+                        Detection and clustering of lead-lag networks for multivariate time series with an application to financial markets
+                        </a> Stefanos Bennett, Mihai Cucuringu and Gesine Reinert.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_12.pdf" target="_blank"> 
+                        Temporal Progression: A case study in Porcine Survivability through Hemostatic Nanoparticles
+                        </a> Chhaya K, Nuzhat Maisha, Leasha J Schaub, Jacob Glaser, Erin Lavik and Vandana Janeja.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_13.pdf" target="_blank"> 
+                        Recurrent Attentive Kernel Learning for Shark Activity Recognition
+                        </a> Matthew Buchholz, Wenlu Zhang, Emily N. Meese, Yu Yang, Christopher G. Lowe and Hen-Geul Yeh.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_15.pdf" target="_blank"> 
+                        HIVE-COTE 2.0: a new meta ensemble for time series classification
+                        </a> Matthew Middlehurst, James Large, Michael Flynn, Jason Lines, Aaron Bostrom and Anthony Bagnall.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_16.pdf" target="_blank"> 
+                        Aggregate Learning for Mixed-Frequency Data
+                        </a> Daisuke Moriwaki, Takamichi Toda and Kazuhiro Ota.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_18.pdf" target="_blank"> 
+                        Multivariate time series forecasting with diffusion kernels: Freeway traffic prediction
+                        </a> Semin Kwak, Nikolasa Geroliminis and Pascal Frossard.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_19.pdf" target="_blank"> 
+                        Time Series Features for Classification of Contaminated Cell Cultures
+                        </a> Laura Tupper, Charles Keese and David Matteson.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_21.pdf" target="_blank"> 
+                        Actionable Insights in Multivariate Time-series for Urban Analytics
+                        </a> Anika Tabassum, Supriya Chinthavali, Varisara Tansakul and B. Aditya Prakash.
+                    </p>
+
+                    <p class="row large text-muted">
+                        <a href="papers/MiLeTS2021_Paper_25.pdf" target="_blank"> 
+                        Forecasting COVID-19 Counts At A Single Hospital: A Hierarchical Bayesian Approach
+                        </a> Alexandra Lee, Panagiotis Lymperopoulos, Joshua T. Cohen, John B. Wong and Michael Hughes.
+                    </p>
 
 
+                    <!-- End Poster List -->
+
+                </div>
+                <div class="col-lg-1 text-justify">
+                    &nbsp;
+                </div>
+
+            </div>
+        </div>
+
+    </section>
     <!-- Call for Papers Section -->
     <section id="call">
         <div class="container">
