--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -627,7 +627,7 @@
                             <b>Camera Ready Version:</b> July 16th, 2021
                         </p>
                         <p class="large text-muted">
-                            <b>Workshop:</b> August 15th, 2021 8:00 AM - 5:00PM PST.
+                            <b>Workshop:</b> August 15th, 2021 8:00 AM - 5:00PM Pacific Time.
                         </p>
                     </div>
                 </div>
