--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -182,7 +182,7 @@
                     <ul>
                         <li><strong>Deep Learning Data-driven approaches for Epidemic Forecasting</strong>, <em>Aditya Prakash</em></li>
                     </ul>
-                    <p>9:10-9:50 Contributed Talks</p>
+                    <p>9:10-10:30 Contributed Talks</p>
                     <ul>
                         <li>
                             <strong>RLAD: Time Series Anomaly Detection through ReinforcementLearning and Active Learning</strong>. Tong Wu and Jorge Ortiz</li>
@@ -193,10 +193,7 @@
                         <li>
                             <strong>Short Text Clustering in Continuous Time Using Stacked Dirichlet-Hawkes Process with Inverse Cluster Frequency Prior</strong>. Avirup Saha and Balaji Ganesan
                         </li>
-                    </ul>
-                    <p>9:50-10:20 Coffee Break</p>
-                    <p>10:20-11:00 Contributed Talks</p>
-                    <ul>
+
                         <li>
                             <strong>TE-ESN: Time Encoding Echo State Network for Prediction Based on Irregularly Sampled Time Series Data</strong>. Chenxi Sun, Shenda Hong, Moxian Song and Hongyan Li</li>
                         <li>
@@ -208,6 +205,7 @@
                             Lazar and John Miller
                         </li>
                     </ul>
+                    <p>10:30-11:00 Coffee Break</p>
                     <p>11:00-12:00 Keynote Talk</p>
                     <ul>
                         <li><strong>Modeling raw, messy time series data with latent stochastic differential equations</strong>, <em>David Duvenaud</em></li>
@@ -221,8 +219,8 @@
                         <li><strong>Irrational Exuberance: Why we should not believe 99% of papers on Time Series Anomaly Detection</strong>, <em>Eamonn Keogh</em></li>
                     </ul>
                     <p>14:00-14:30 Poster Spotlights</p>
-                    <p>14:30-15:00 Coffee Break</p>
-                    <p>15:00-16:00 Poster Session</p>
+                    <p>14:30-16:00 Coffee Break & Poster Session</p>
+                    <!-- <p>15:00-16:00 Poster Session</p> -->
                     <p>16:00-16:50 Keynote Talk</p>
                     <ul>
                         <li><strong>On the Interface between Optimal Transport and Time Series</strong>, <em>Marco Cuturi</em></li>
