--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -334,7 +334,8 @@
                         In the last five years there has been an explosion of paper on time series anomaly detection (TSAD) appearing in all the top conferences. In this talk I will make a surprising claim. Almost all such papers suffer from various flaws, including: Testing
                         on deeply flawed datasets, use of inappropriate measures of success, non-reproducible experiments, unjustified complexity, and ignoring competitive decades-old methods. I will demonstrate that because of these flaws, we should
                         not believe the claims of most papers on time series anomaly detection. Rather than a completely pessimistic talk, I will take this opportunity to release a new set of 250 benchmark datasets and guidelines that will go some way
-                        to mitigating the problems.
+                        to mitigating the problems. <br>
+                        <a href="slides/Irrational Exuberance_Eammon_Keogh.pdf" target="_blank">[Slides]</a>
                     </p>
                     <p>
                         <b>Bio</b><br>Eamonn Keogh is a Distinguished Professor of Computer Science at the University of California Riverside. With his students, he invented many of the most commonly used time series primitives, including Shapelets, Discords,
