Adds keynotes slides from David Duvenaud.

--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -301,8 +301,10 @@
                         models were efficiently trainable with millions of parameters. We construct a scalable algorithm for computing gradients through samples from stochastic differential equations (SDEs), and for gradient-based stochastic variational
                         inference in function space, all with the use of adaptive black-box SDE solvers. This allows us to fit a new family of richly-parameterized distributions over time series, in which neural networks can parameterize both dynamics
                         and likelihoods. We demonstrate these latent SDEs on motion capture data, and provide an open-source PyTorch library for fitting large SDE models.
-                        <br> <a href=" https://arxiv.org/abs/2001.01328" target="_blank">[Paper]</a>
+                        <br><a href="https://drive.google.com/file/d/1A0BQ_ybncmDbYtDjwXzEihfTN-X5WoOs/view?usp=sharing" target="_blank">[Slides]</a>
+                        <a href=" https://arxiv.org/abs/2001.01328" target="_blank">[Paper]</a>
                         <a href="https://github.com/google-research/torchsde">[Code]</a>
+                        
                     </p>
                     <p>
                         <b>Bio</b><br>David Duvenaud is an assistant professor at the University of Toronto. His research focuses on constructing deep probabilistic models to help predict, explain and design things. For example: Neural ODEs, a kind of
