--- a/milets2022/index.html
+++ b/milets2022/index.html
@@ -630,7 +630,7 @@
 
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/luke.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/Luke.jpg" class="img-responsive img-circle" alt="">
                         <h4><a href="https://www.linkedin.com/in/jun-luke-huan-58963121">Jun (Luke) Huan</a></h4>
                         <p class="text-muted">AWS AI Labs</p>
                     </div>
@@ -641,7 +641,7 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/cong.png" class="img-responsive img-circle" alt="">
+                        <img src="img/Cong.png" class="img-responsive img-circle" alt="">
                         <h4><a href="http://www.ece.virginia.edu/~cs7dt/">Cong Shen</a></h4>
                         <p class="text-muted">University of Virginia</p>
                     </div>
