--- a/milets2022/index.html
+++ b/milets2022/index.html
@@ -533,9 +533,7 @@
                     <p class="large text-muted">
                         Submissions should follow the <a href="https://kdd.org/kdd2022/cfpResearch.html">SIGKDD
                     formatting requirements</a> (unless otherwise stated) and will be evaluated using the <a href="https://kdd.org/kdd2022/cfpResearch.html">SIGKDD
-                    Research Track evaluation criteria</a>. Preference will be given to papers that are reproducible, and authors are encouraged to share their data and code publicly whenever possible. Submissions are strongly recommended to be no more than 9 pages, including references (all in a single pdf). All submissions must be in pdf format using the workshop
-                        template (<a href="template/sample-latex-milets21.zip" target="_blank">latex</a>,
-                        <a href="template/word-template-anonymous.docx" target="_blank">word</a>). Submissions will be managed via the MiLeTS 2022 EasyChair website: <a href="https://easychair.org/conferences/?conf=milets2022" target="_blank">https://easychair.org/conferences/?conf=milets2022</a>.
+                    Research Track evaluation criteria</a>. Preference will be given to papers that are reproducible, and authors are encouraged to share their data and code publicly whenever possible. Submissions are limited to be no more than 9 pages (suggested 4-8 pages), including references (all in a single pdf). All submissions must be in pdf format using the KDD main conference paper template (see: <a href ="https://kdd.org/kdd2022/cfpResearch.html"> https://kdd.org/kdd2022/cfpResearch.html </a>). Submissions will be managed via the MiLeTS 2022 EasyChair website: <a href="https://easychair.org/conferences/?conf=milets2022" target="_blank">https://easychair.org/conferences/?conf=milets2022</a>.
                     </p>
 
                     <p class="large text-muted">
@@ -558,6 +556,12 @@
                         Any questions may be directed to the workshop e-mail address: <a href="mailto:kdd.milets@gmail.com">kdd.milets@gmail.com</a>.
 
                     </p>
+
+                    <p class="large text-muted">
+                        Download Call for Papers <a href="template/CFP_MILETS_2022.pdf">here</a>.
+
+                    </p>
+
                 </div>
             </div>
         </div>
