updated deadline date

--- a/milets2022/index.html
+++ b/milets2022/index.html
@@ -586,9 +586,8 @@
                         <!--</p>-->
                         <p class="large text-muted">
                             <b>Paper Submission Deadline:</b>
-                            <!-- <span style="text-decoration: line-through;" class="text-muted">May 26th</span> 
-                             -->
-                            May 26th, 2022, 11:59PM Alofi Time
+                            <span style="text-decoration: line-through;" class="text-muted">May 26th</span> 
+                            June 1st, 2022, 11:59PM Alofi Time
                         </p>
                         <p class="large text-muted">
                             <b>Author Notification:</b> <span>June 20th, 2022</span>
