updated author notification date

--- a/milets2022/index.html
+++ b/milets2022/index.html
@@ -590,7 +590,9 @@
                             June 1st, 2022, 11:59PM Alofi Time
                         </p>
                         <p class="large text-muted">
-                            <b>Author Notification:</b> <span>June 20th, 2022</span>
+                            <b>Author Notification:</b> 
+                            <span style="text-decoration: line-through;" class="text-muted">June 20th</span> 
+                            June 27th, 2022
                         </p>
                         <p class="large text-muted">
                             <b>Camera Ready Version:</b> July 2nd, 2022
