updated keynote talks

--- a/milets2022/index.html
+++ b/milets2022/index.html
@@ -187,6 +187,11 @@
                     </ul>
                     <p>9:30-10:00 Coffee Break</p>
                     <p>10:00-10:40 Keynote Talk </p>
+                    <ul>
+                        <li><strong>Improving Forecasting by Merging Deep Learning with Mechanistic Modeling</strong>, <em>Christopher Rackauckas</em></li>
+                    </ul>    
+
+
                     <p>10:40-12:00 Contributed Talks </p>
                     
                     <ul>
@@ -218,13 +223,16 @@
                     <h3>AFTERNOON SESSION (EST)</h3>
                     <p>13:00-13:40 Keynote Talk </p>
                     <ul>
-                        <li>TBA</li>
-                    </ul>
+                        <li><strong>RNNs for Time Series Forecasting
+                            </strong>, <em>Slawek Smyl</em></li>
+                    </ul>    
+
                 
                      <p>13:40-14:20 Keynote Talk </p>
                      <ul>
-                        <li>TBA</li>
-                    </ul>
+                        <li><strong>Interpretable Mixture of Experts for Structured Data</strong>, <em>Sercan Arik</em></li>
+                    </ul>    
+
                     <p>14:30-15:00 Keynote Talk </p>
                     <ul>
                         <li><strong>Graph-Guided Networks for Complex Time Series
