--- a/milets2022/index.html
+++ b/milets2022/index.html
@@ -348,7 +348,7 @@
                         <a href=" https://chrisrackauckas.com/" target="_blank">
                             <img src="img/ChristopherRackauckas.png" style="height: 240px; width:240px;" class="img-responsive img-circle" alt="Christopher Rackauckas">
                         </a>
-                        <h4><a href="https://chrisrackauckas.com/" target="_blank">Dr. Christopher Rackauckas</a></h4>
+                        <h4><a href="https://chrisrackauckas.com/" target="_blank">Christopher Rackauckas</a></h4>
                         <p class="text-muted">Director of Modeling and Simulation, Julia Computing, </br>
                         Director of Scientific Research, Pumas-AI, </br>
                         Research Affiliate, Co-PI of the Julia Lab  Massachusetts Institute of Technology</p>
