--- a/milets2023/index.html
+++ b/milets2023/index.html
@@ -294,8 +294,8 @@
                         </p>
                         <p class="large text-muted">
                             <b>Author Notification:</b> 
-                            <!-- <span style="text-decoration: line-through;" class="text-muted">June 20th</span> -->
-                            June 13th, 2023
+                            <span style="text-decoration: line-through;" class="text-muted">June 13th</span> 
+                            June 20th, 2023
                         </p>
                         <p class="large text-muted">
                             <b>Camera Ready Version:</b> 
