--- a/milets2023/index.html
+++ b/milets2023/index.html
@@ -189,7 +189,7 @@
                 
                     <p>2:50-2:45 Keynote Talk </p>
                     <ul>
-                        <li><strong>TBA
+                        <li><strong> Modeling Temporal Data via Knowledge-Guided Machine Learning: A New Framework for Accelerating Scientific Discovery and Addressing Global Environmental Challenges
                             </strong>, <em>Prof. Vipin Kumar</em></li>
                     </ul>  
                    
