updated due date

--- a/milets2024/index.html
+++ b/milets2024/index.html
@@ -106,14 +106,29 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="intro-text" style="color:darkblue;">
+            <div class="intro-text" style="color:Red;">
 
-                <div class="intro-heading">The 10th Mining and Learning from Time Series Workshop: From Classical Methods to LLMs</div>
+               <!-- <div class="intro-heading">The 10th Mining and Learning from Time Series Workshop: From Classical Methods to LLMs</div>
                 <div class="intro-lead-in">Held in conjunction with <a href="https://kdd2024.kdd.org/" target=_blank>KDD'24</a><br/> Aug 25th, 2024
-                </div>
+                </div> -->
+                
             </div>
         </div>
     </header>
+
+    <!-- Title Section -->
+    <section id="title" style="padding-top: 30px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center" style="color:darkblue;">
+                    <H1>The 10th Mining and Learning from Time Series Workshop: From Classical Methods to LLMs</H1>
+                    <H3><i>(KDD MILETS Workshop 2024)</i></H3>
+                    <H2>Held in conjunction with <a href="https://kdd2024.kdd.org/" target=_blank>KDD'24</a><br/> Aug 25th, 2024 </H2>
+                </div>
+            </div>
+        </div>
+    <section>
+
 
     <!-- Introduction Section -->
     <section id="introduction" style="padding-top: 30px;">
@@ -276,8 +291,8 @@
                         <!--</p>-->
                         <p class="large text-muted">
                             <b>Paper Submission Deadline:</b>
-                            <!--<span style="text-decoration: line-through;" class="text-muted">May 26th</span> -->
-                            May 28th, 2024, 11:59PM Alofi Time
+                              <span style="text-decoration: line-through;" class="text-muted">May 28th</span> 
+                            June 8th, 2024, 11:59PM Alofi Time
                         </p>
                         <p class="large text-muted">
                             <b>Author Notification:</b> 
