--- a/milets2024/index.html
+++ b/milets2024/index.html
@@ -123,7 +123,7 @@
                 <div class="col-lg-12 text-center" style="color:darkblue;">
                     <H1>The 10th Mining and Learning from Time Series Workshop: From Classical Methods to LLMs</H1>
                     <H3><i>(KDD MILETS Workshop 2024)</i></H3>
-                    <H2>Held in conjunction with <a href="https://kdd2024.kdd.org/" target=_blank>KDD'24</a><br/> Aug 25th, 2024 </H2>
+                    <H2>Held in conjunction with <a href="https://kdd2024.kdd.org/" target=_blank>KDD'24</a><br/> Aug 26th, 2024 </H2>
                 </div>
             </div>
         </div>
@@ -292,19 +292,19 @@
                         <p class="large text-muted">
                             <b>Paper Submission Deadline:</b>
                               <span style="text-decoration: line-through;" class="text-muted">May 28th</span> 
-                            June 21th, 2024, 11:59PM Alofi Time
+                            June 21st, 2024, 11:59PM Alofi Time
                         </p>
                         <p class="large text-muted">
                             <b>Author Notification:</b> 
-                             
-                            June 28th, 2024
+                            <span style="text-decoration: line-through;" class="text-muted">June 28th</span> 
+                            July 21st, 2024, 11:59PM Alofi Time
                         </p>
                         <p class="large text-muted">
                             <b>Camera Ready Version:</b> 
-                            July 10th, 2024
+                            July 27th, 2024
                         </p>
                         <p class="large text-muted">
-                            <b>Workshop:</b> August 25th, 2024
+                            <b>Workshop:</b> August 26th, 2024
                         </p>
                     </div>
                 </div>
