--- a/milets2024/index.html
+++ b/milets2024/index.html
@@ -301,7 +301,7 @@
                         </p>
                         <p class="large text-muted">
                             <b>Camera Ready Version:</b> 
-                            July 27th, 2024
+                            August 2nd, 2024
                         </p>
                         <p class="large text-muted">
                             <b>Workshop:</b> August 26th, 2024
