--- a/milets2024/index.html
+++ b/milets2024/index.html
@@ -255,10 +255,10 @@
              <div class="row speakers">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <a href="" target="_blank">
+                        <a href="" target="https://www.linkedin.com/in/ywang02/">
                             <img src="img/bernie.jpeg" style="height: 200px; width:200px;" class="img-responsive img-circle" alt="Bernie Wang">
                         </a>
-                        <h4><a href="" target="_blank">Bernie Wang</a></h4>
+                        <h4><a href="" target="https://www.linkedin.com/in/ywang02/">Bernie Wang</a></h4>
                         <p class="text-muted">Principal Machine Learning Scientist<br/>
                     AWS AI Labs <br/>Amazon</p>
 
