--- a/milets2024/index.html
+++ b/milets2024/index.html
@@ -256,7 +256,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <a href="" target="https://www.linkedin.com/in/ywang02/">
-                            <img src="img/bernie.jpg" style="height: 200px; width:200px;" class="img-responsive img-circle" alt="Bernie Wang">
+                            <img src="img/Bernie.JPEG" style="height: 200px; width:200px;" class="img-responsive img-circle" alt="Bernie Wang">
                         </a>
                         <h4><a href="" target="https://www.linkedin.com/in/ywang02/">Bernie Wang</a></h4>
                         <p class="text-muted">Principal Machine Learning Scientist<br/>
