--- a/milets2024/index.html
+++ b/milets2024/index.html
@@ -591,7 +591,7 @@
 
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/XikunZhang.jpg" style="height: 150px; width:350px;" class="img-responsive img-circle" alt="">
+                        <img src="img/XikunZhang.jpg" class="img-responsive img-circle" alt="">
                         <h4><a href="https://scholar.google.com/citations?user=oBlKsZ4AAAAJ&hl=en">Xikun Zhang</a></h4>
                         <p class="text-muted">University of Sydney</p>
                     </div>
