--- a/milets2025/index.html
+++ b/milets2025/index.html
@@ -439,9 +439,9 @@
 
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/XikunZhang.jpg" class="img-responsive img-circle" alt="">
-                        <h4><a href="https://scholar.google.com/citations?user=oBlKsZ4AAAAJ&hl=en">Xikun Zhang</a></h4>
-                        <p class="text-muted">University of Sydney</p>
+                        <img src="img/YuxuanLiang.jpg" class="img-responsive img-circle" alt="">
+                        <h4><a href="https://yuxuanliang.com/">Yuxuan Liang</a></h4>
+                        <p class="text-muted">Hong Kong University of Science and Technology</p>
                     </div>
                 </div>
 
